# solarbextrapolation

./: .gitignore  .gitmodules  .rtd-environment.yml  .travis.yml  LICENSE  README.md  README.rst  pytest.ini  setup.cfg  setup.py
docs/: conf.py  index.rst  rtd-pip-requirements
examples/: README.txt  define_and_run_trivial_analytical_model.py  define_and_run_trivial_preprocessor_and_extrapolator.py  example_define_and_run_trivial_preprocessor_and_extrapolator.py  example_full_potential_extrapolation.py  example_generate_example_data.py  extrapolate_datasets.py  full_potential_extrapolation.py  gaussian_example_data.py  plot_define_and_run_trivial_analytical_model.py  plot_define_and_run_trivial_preprocessor_and_extrapolator.py  plot_get_hmi.py  plot_potential_extrapolation_of_example_data.py  plot_potential_extrapolation_of_example_data_gal.py  plot_potential_extrapolation_of_hmi_data.py  plot_potential_extrapolation_of_images.py  potential_extrapolation_of_example_data.py  potential_extrapolation_of_hmi_data.py  potential_extrapolation_of_hmi_data_gal.py  potential_extrapolation_of_hmi_fits_file.py  potential_extrapolation_of_images.py  potential_extrapolation_performance_tests.py
licenses/: LICENSE.rst
solarbextrapolation/: __init__.py  classes.py  conftest.py  example_data_generator.py  example_full_potential_extrapolation.py  example_generate_example_data.py  map3dclasses.py  mayavi_seed_streamlines.py  potential_field_extrapolator.py  potential_field_extrapolator_numba.py  potential_field_extrapolator_python.py  titov_demoulin_equilibrium_analytical_model.py  (+2 more)
(+89 files in other folders)
