[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build docs/auto_examples examples
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = solarbextrapolation
description = Solar atmosphere magnetic field extrapolation package.
long_description = A package of tools relating to the extrapolation of solar atmosphere magnetic fields using magenetogram boundary data.
author = Alex Hamilton
author_email = a.i.hamilton@se11.qmul.ac.uk
license = BSD
url = http://docs.sunpy.org/projects/solarbextrapolation/
edit_on_github = False
github_project = sunpy/solarbextrapolation
